# thesis

./: .embedding_cache.pkl  .gitignore  README.md  bayesian_quantile_transformer.py  data_for_model.csv  data_for_model_reconstructed.csv  llm.py  merged_data.csv  merged_data_with_nlp.csv  nlp_dataset.py  nlp_model.py  parse.py  pyproject.toml  regression.py  result.txt  test_nlp_dataset_demo.py  test_regression_calculation.py  vector.py
translated/: 00_02.md  00_03.md  00_04.md  00_05.md  00_06.md  00_07.md  00_08.md  00_09.md  00_10.md  00_11.md  00_12.md  01_01.md  01_02.md  01_03.md  01_04.md  01_05.md  01_06.md  01_07.md  01_08.md  01_09.md  01_10.md  01_11.md  01_12.md  02_01.md  02_02.md  02_03.md  02_04.md  02_06.md  02_07.md  02_08.md  02_09.md  02_10.md  02_11.md  02_12.md  03_01.md  03_02.md  03_03.md  03_04.md  03_05.md  03_06.md  (+245 more)
